// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/Pagination Check snapshots should renders correctly pagination range 1`] = `
<div
  className="consonant-pagination"
>
  <div
    className="consonant-pagination--paginator"
  >
    <button
      className="consonant-pagination--btn consonant-pagination--btn_prev"
      data-testid="btn_prev"
      onClick={[Function]}
      tabIndex="0"
      type="buttton"
    >
      i18n.paginator.prevLabel
    </button>
    <ul
      className="consonant-pagination--items"
    >
      <li
        className="consonant-pagination--item"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          1
        </button>
      </li>
    </ul>
    <button
      className="consonant-pagination--btn consonant-pagination--btn_next"
      data-testid="btn_next"
      onClick={[Function]}
      tabIndex="0"
      type="buttton"
    >
      i18n.paginator.nextLabel
    </button>
  </div>
  <div
    className="consonant-pagination--summary"
    dangerouslySetInnerHTML={
      Object {
        "__html": "i18n.paginator.resultsQuantityText <strong>-9</strong> <strong>0</strong> <strong>100</strong>",
      }
    }
    data-testid="pagination--summary"
  />
</div>
`;

exports[`Consonant/Pagination Check snapshots should renders correctly pagination range 2`] = `
<div
  className="consonant-pagination"
>
  <div
    className="consonant-pagination--paginator"
  >
    <button
      className="consonant-pagination--btn consonant-pagination--btn_prev"
      data-testid="btn_prev"
      onClick={[Function]}
      tabIndex="0"
      type="buttton"
    >
      i18n.paginator.prevLabel
    </button>
    <ul
      className="consonant-pagination--items"
    >
      <li
        className="consonant-pagination--item consonant-pagination--item_active"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          1
        </button>
      </li>
      <li
        className="consonant-pagination--item"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          0
        </button>
      </li>
    </ul>
    <button
      className="consonant-pagination--btn consonant-pagination--btn_next"
      data-testid="btn_next"
      onClick={[Function]}
      tabIndex="0"
      type="buttton"
    >
      i18n.paginator.nextLabel
    </button>
  </div>
  <div
    className="consonant-pagination--summary"
    dangerouslySetInnerHTML={
      Object {
        "__html": "i18n.paginator.resultsQuantityText <strong>1</strong> <strong>10</strong> <strong>100</strong>",
      }
    }
    data-testid="pagination--summary"
  />
</div>
`;

exports[`Consonant/Pagination Check snapshots should renders correctly pagination range 3`] = `
<div
  className="consonant-pagination"
>
  <div
    className="consonant-pagination--paginator"
  >
    <button
      className="consonant-pagination--btn consonant-pagination--btn_prev"
      data-testid="btn_prev"
      onClick={[Function]}
      tabIndex="0"
      type="buttton"
    >
      i18n.paginator.prevLabel
    </button>
    <ul
      className="consonant-pagination--items"
    >
      <li
        className="consonant-pagination--item"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          1
        </button>
      </li>
      <li
        className="consonant-pagination--item consonant-pagination--item_active"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          0
        </button>
      </li>
    </ul>
    <button
      className="consonant-pagination--btn consonant-pagination--btn_next"
      data-testid="btn_next"
      onClick={[Function]}
      tabIndex="0"
      type="buttton"
    >
      i18n.paginator.nextLabel
    </button>
  </div>
  <div
    className="consonant-pagination--summary"
    dangerouslySetInnerHTML={
      Object {
        "__html": "i18n.paginator.resultsQuantityText <strong>-9</strong> <strong>0</strong> <strong>100</strong>",
      }
    }
    data-testid="pagination--summary"
  />
</div>
`;

exports[`Consonant/Pagination Check snapshots should renders correctly pagination range 4`] = `
<div
  className="consonant-pagination"
>
  <div
    className="consonant-pagination--paginator"
  >
    <button
      className="consonant-pagination--btn consonant-pagination--btn_prev"
      data-testid="btn_prev"
      onClick={[Function]}
      tabIndex="0"
      type="buttton"
    >
      i18n.paginator.prevLabel
    </button>
    <ul
      className="consonant-pagination--items"
    >
      <li
        className="consonant-pagination--item consonant-pagination--item_active"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          1
        </button>
      </li>
      <li
        className="consonant-pagination--item"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          0
        </button>
      </li>
    </ul>
    <button
      className="consonant-pagination--btn consonant-pagination--btn_next"
      data-testid="btn_next"
      onClick={[Function]}
      tabIndex="0"
      type="buttton"
    >
      i18n.paginator.nextLabel
    </button>
  </div>
  <div
    className="consonant-pagination--summary"
    dangerouslySetInnerHTML={
      Object {
        "__html": "i18n.paginator.resultsQuantityText <strong>1</strong> <strong>10</strong> <strong>100</strong>",
      }
    }
    data-testid="pagination--summary"
  />
</div>
`;

exports[`Consonant/Pagination Check snapshots should renders correctly pagination range 5`] = `
<div
  className="consonant-pagination"
>
  <div
    className="consonant-pagination--paginator"
  >
    <button
      className="consonant-pagination--btn consonant-pagination--btn_prev"
      data-testid="btn_prev"
      onClick={[Function]}
      tabIndex="0"
      type="buttton"
    >
      i18n.paginator.prevLabel
    </button>
    <ul
      className="consonant-pagination--items"
    >
      <li
        className="consonant-pagination--item consonant-pagination--item_active"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          1
        </button>
      </li>
    </ul>
    <button
      className="consonant-pagination--btn consonant-pagination--btn_next"
      data-testid="btn_next"
      onClick={[Function]}
      tabIndex="0"
      type="buttton"
    >
      i18n.paginator.nextLabel
    </button>
  </div>
  <div
    className="consonant-pagination--summary"
    dangerouslySetInnerHTML={
      Object {
        "__html": "i18n.paginator.resultsQuantityText <strong>1</strong> <strong>10</strong> <strong>100</strong>",
      }
    }
    data-testid="pagination--summary"
  />
</div>
`;

exports[`Consonant/Pagination Check snapshots should renders correctly pagination range 6`] = `
<div
  className="consonant-pagination"
>
  <div
    className="consonant-pagination--paginator"
  >
    <button
      className="consonant-pagination--btn consonant-pagination--btn_prev"
      data-testid="btn_prev"
      onClick={[Function]}
      tabIndex="0"
      type="buttton"
    >
      i18n.paginator.prevLabel
    </button>
    <ul
      className="consonant-pagination--items"
    >
      <li
        className="consonant-pagination--item"
      >
        <button
          className="consonant-pagination--item-btn"
          data-testid="btn_page"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          1
        </button>
      </li>
    </ul>
    <button
      className="consonant-pagination--btn consonant-pagination--btn_next"
      data-testid="btn_next"
      onClick={[Function]}
      tabIndex="0"
      type="buttton"
    >
      i18n.paginator.nextLabel
    </button>
  </div>
  <div
    className="consonant-pagination--summary"
    dangerouslySetInnerHTML={
      Object {
        "__html": "i18n.paginator.resultsQuantityText <strong>-9</strong> <strong>0</strong> <strong>100</strong>",
      }
    }
    data-testid="pagination--summary"
  />
</div>
`;
